src/objects/pse__Expense__c.object
<CustomObject>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Expense (Revenue Transaction)</relationshipLabel>
        <relationshipName>RevenueForExpenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Split_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Split_Notes__c</fullName>
        <label>Split Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Synchronous_Update_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is for system use.  It is intended to be checked in conjunction with any insert/update of the Timecard Split executed within a future method, and will then ensure that no downstream future methods are called.  In Salesforce, a future method can&apos;t call another future method.  Triggers should then unset this checkbox so that it never remains checked persistently.

Danger:  only check this flag for changes NOT on the &quot;critical&quot; path with respect to governor limits.  For example, it is ok to check this flag if the only change to the Expense is to modify the Billed/Invoiced flags and the Billing Event Item lookup value.</description>
        <inlineHelpText>This checkbox is for system use.  It is intended to be checked in conjunction with any insert/update of the Timecard Split executed within a future method, and will then ensure that no downstream future methods are called.</inlineHelpText>
        <label>Synchronous Update Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Tax_Type__c</fullName>
        <description>An optional type of tax that has been included in the expense</description>
        <inlineHelpText>An optional type of tax that has been included in the expense</inlineHelpText>
        <label>Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Airfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging (Room and Tax)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasoline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Equipment and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postage and Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General and Admin Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Invoice_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoice Item</label>
        <referenceTo>pse__Vendor_Invoice_Item__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Expense_Report__c</columns>
        <columns>pse__Expense_Date__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Billable__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Assignment__c</columns>
        <columns>pse__Amount__c</columns>
        <columns>pse__Billing_Amount__c</columns>
        <columns>pse__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EXP-{0}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Approver_Share__c</fullName>
        <label>PSE Approver Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Expense_Asgnmt_Project_Mismatch</fullName>
        <active>true</active>
        <description>Assignment Project must match Expense Project.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),(pse__Assignment__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Assignment__r.pse__Project__c)),(pse__Assignment__r.pse__Project__c &lt;&gt; &apos;&apos;),(pse__Project__c &lt;&gt; pse__Assignment__r.pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Assignment__c</errorDisplayField>
        <errorMessage>Assignment Project must match Expense Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Asgnmt_Resource_Mismatch</fullName>
        <active>true</active>
        <description>Assignment Resource must match Expense Resource.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),(pse__Assignment__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Assignment__r.pse__Resource__c)),(pse__Assignment__r.pse__Resource__c &lt;&gt; &apos;&apos;),(pse__Resource__c &lt;&gt; pse__Assignment__r.pse__Resource__c))</errorConditionFormula>
        <errorDisplayField>pse__Assignment__c</errorDisplayField>
        <errorMessage>Assignment Resource must match Expense Resource.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_ER_Project_Mismatch</fullName>
        <active>true</active>
        <description>Expense Line Project must match Expense Report Project.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Project__c)),(pse__Project__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Expense_Report__c)),(pse__Expense_Report__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Expense_Report__r.pse__Project__c)),(pse__Expense_Report__r.pse__Project__c &lt;&gt; &apos;&apos;),(pse__Project__c &lt;&gt; pse__Expense_Report__r.pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Expense_Report__c</errorDisplayField>
        <errorMessage>Expense Line Project must match Expense Report Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_ER_Resource_Mismatch</fullName>
        <active>true</active>
        <description>Expense Line Resource must match Expense Report Resource.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Resource__c)),(pse__Resource__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Expense_Report__c)),(pse__Expense_Report__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Expense_Report__r.pse__Resource__c)),(pse__Expense_Report__r.pse__Resource__c &lt;&gt; &apos;&apos;),(pse__Resource__c &lt;&gt; pse__Expense_Report__r.pse__Resource__c))</errorConditionFormula>
        <errorDisplayField>pse__Expense_Report__c</errorDisplayField>
        <errorMessage>Expense Line Resource must match Expense Report Resource.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Line_Billing_Requires_Inclusion</fullName>
        <active>true</active>
        <description>For an Expense Line to be marked as Billed, it must also be marked as Included in Financials and Approved.</description>
        <errorConditionFormula>AND(pse__Billed__c,OR(NOT(pse__Include_In_Financials__c),NOT(pse__Approved__c)))</errorConditionFormula>
        <errorDisplayField>pse__Billed__c</errorDisplayField>
        <errorMessage>For an Expense Line to be marked as Billed, it must also be marked as Included in Financials and Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Line_Invoicing_Requires_Billing</fullName>
        <active>true</active>
        <description>For an Expense Line to be marked as Invoiced, it must also be marked as Billed.</description>
        <errorConditionFormula>AND(pse__Invoiced__c,NOT(pse__Billed__c))</errorConditionFormula>
        <errorDisplayField>pse__Invoiced__c</errorDisplayField>
        <errorMessage>For an Expense Line to be marked as Invoiced, it must also be marked as Billed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Line_Needs_Parent_For_Submit</fullName>
        <active>true</active>
        <description>An Expense Line may not be submitted or included in financials unless it belongs to an Expense Report.</description>
        <errorConditionFormula>AND(OR((pse__Expense_Report__c=&apos;&apos;),ISNULL(pse__Expense_Report__c)),OR(pse__Submitted__c,pse__Include_In_Financials__c))</errorConditionFormula>
        <errorDisplayField>pse__Expense_Report__c</errorDisplayField>
        <errorMessage>An Expense Line may not be submitted or included in financials unless it belongs to an Expense Report.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Line_Project_is_Constant</fullName>
        <active>true</active>
        <description>A Expense Line&apos;s Project field value may not be updated once set (unless parent Expense Report is changed, Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
        <errorConditionFormula>AND(ISCHANGED(pse__Project__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c))),NOT(ISCHANGED(pse__Expense_Report__c)))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>A Expense Line&apos;s Project field value may not be updated once set (unless parent Expense Report is changed, Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Line_Report_Fixed_If_Submitted</fullName>
        <active>true</active>
        <description>A Expense Line&apos;s Expense Report may not be changed if it is submitted or included in financials.</description>
        <errorConditionFormula>AND(ISCHANGED(pse__Expense_Report__c),OR(pse__Submitted__c,pse__Include_In_Financials__c))</errorConditionFormula>
        <errorDisplayField>pse__Expense_Report__c</errorDisplayField>
        <errorMessage>A Expense Line&apos;s Expense Report may not be changed if it is submitted or included in financials.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Line_Resource_is_Constant</fullName>
        <active>true</active>
        <description>A Expense Line&apos;s Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
        <errorConditionFormula>OR(ISNULL(pse__Resource__c),(pse__Resource__c=&apos;&apos;),AND(ISCHANGED(pse__Resource__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c)))))</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>A Expense Line&apos;s Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_May_Not_Be_Billable</fullName>
        <active>true</active>
        <description>An Expense may only be marked as Billable if its Project is Billable and its Expense Report and Assignment, if any, are Billable.</description>
        <errorConditionFormula>AND(pse__Billable__c, OR(AND(NOT(ISNULL(pse__Expense_Report__c)), (pse__Expense_Report__c &lt;&gt; &apos;&apos;), NOT(pse__Expense_Report__r.pse__Billable__c)), AND(NOT(ISNULL(pse__Assignment__c)), (pse__Assignment__c &lt;&gt; &apos;&apos;), NOT(pse__Assignment__r.pse__Is_Billable__c)), AND(NOT(ISNULL(pse__Project__c)), (pse__Project__c &lt;&gt; &apos;&apos;), NOT(pse__Project__r.pse__Is_Billable__c))))</errorConditionFormula>
        <errorDisplayField>pse__Billable__c</errorDisplayField>
        <errorMessage>An Expense may only be marked as Billable if its Project is Billable and its Expense Report and Assignment, if any, are Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Milestone_Project_Mismatch</fullName>
        <active>true</active>
        <description>Milestone Project must match Expense Project.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Milestone__c)),(pse__Milestone__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Milestone__r.pse__Project__c)),(pse__Milestone__r.pse__Project__c &lt;&gt; &apos;&apos;),(pse__Project__c &lt;&gt; pse__Milestone__r.pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Milestone__c</errorDisplayField>
        <errorMessage>Milestone Project must match Expense Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Requires_Expense_Report</fullName>
        <active>false</active>
        <description>By default expenses will require expense reports. This rule may be deactivated if standalone expenses are allowed.</description>
        <errorConditionFormula>OR(ISNULL(pse__Expense_Report__c),LEN(pse__Expense_Report__c)=0)</errorConditionFormula>
        <errorDisplayField>pse__Expense_Report__c</errorDisplayField>
        <errorMessage>Expense Report is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Incurred_Tax_Amount_Invalid</fullName>
        <active>true</active>
        <description>If provided, the incurred tax amount for an Expense must not be less than zero or greater than the Expense amount itself.  (If Expense amount is negative, incurred tax amount must be null or zero).</description>
        <errorConditionFormula>NOT(OR(ISNULL(pse__Incurred_Tax__c),AND((pse__Incurred_Tax__c &gt;= 0.00),(pse__Incurred_Tax__c &lt;= MAX(pse__Amount__c,0.00)))))</errorConditionFormula>
        <errorDisplayField>pse__Incurred_Tax__c</errorDisplayField>
        <errorMessage>If provided, the incurred tax amount for an Expense must not be less than zero or greater than the Expense amount itself.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Invoiced</fullName>
        <active>true</active>
        <description>Invoice Number or Date is not allowed on record unless it is invoiced</description>
        <errorConditionFormula>(pse__Invoice_Number__c != null ||
pse__Invoice_Date__c != null) &amp;&amp; pse__Invoiced__c = false</errorConditionFormula>
        <errorMessage>Invoice Number or Date is not allowed on record unless it is invoiced</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Non_Billable_Incurred_Amount_Invalid</fullName>
        <active>true</active>
        <description>If provided, the non-billable incurred amount for an Expense must not be less than zero or greater than the Expense amount itself.  (If Expense amount is negative, non-billable incurred amount must be null or zero).</description>
        <errorConditionFormula>NOT(OR(ISNULL(pse__Non_Billable_Incurred_Amount__c),AND((pse__Non_Billable_Incurred_Amount__c &gt;= 0.00),(pse__Non_Billable_Incurred_Amount__c &lt;= MAX(pse__Amount__c,0.00)))))</errorConditionFormula>
        <errorDisplayField>pse__Non_Billable_Incurred_Amount__c</errorDisplayField>
        <errorMessage>If provided, the non-billable incurred amount for an Expense must not be less than zero or greater than the Expense amount itself.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Non_Billable_Subtotal_Invalid</fullName>
        <active>true</active>
        <description>The non-billable incurred subtotal for an Expense (any non-billable amount plus any non-billable tax) must not be greater than the Expense amount itself (or zero, whichever is greater).</description>
        <errorConditionFormula>((pse__Non_Billable_Incurred_Amount__c + IF(pse__Incurred_Tax_Non_Billable__c,pse__Incurred_Tax__c,0.00)) &gt; MAX(pse__Amount__c,0.00))</errorConditionFormula>
        <errorMessage>The non-billable incurred subtotal for an Expense (any non-billable amount plus any non-billable tax) must not be greater than the Expense amount itself.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Res_Defined_Rate_Diff_Currencies_Only</fullName>
        <active>true</active>
        <description>Resource-defined Exchange Rate can only be set if Incurred and Resource currencies are different.  If the currencies are the same, a relative rate of 1.0 is implied.</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(pse__Exchange_Rate_Resource_Defined__c),(pse__Exchange_Rate_Resource_Defined__c=1.0))),(TEXT(CurrencyIsoCode)=TEXT(pse__Resource__r.CurrencyIsoCode)))</errorConditionFormula>
        <errorDisplayField>pse__Exchange_Rate_Resource_Defined__c</errorDisplayField>
        <errorMessage>Resource-defined Exchange Rate can only be set if Incurred and Resource currencies are different.  If the currencies are the same, a relative rate of 1.0 is implied.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Res_Defined_Rate_may_not_be_Negative</fullName>
        <active>true</active>
        <description>Resource-defined Exchange Rate must either be greater than 0.0 (zero) or null/empty.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Exchange_Rate_Resource_Defined__c)),(pse__Exchange_Rate_Resource_Defined__c&lt;=0.0))</errorConditionFormula>
        <errorDisplayField>pse__Exchange_Rate_Resource_Defined__c</errorDisplayField>
        <errorMessage>Resource-defined Exchange Rate must either be greater than 0.0 (zero) or null/empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Vendor_Invoice_Constant</fullName>
        <active>true</active>
        <description>The vendor invoice cannot change once set.</description>
        <errorConditionFormula>AND(ISCHANGED(pse__Vendor_Invoice_Item__c),LEN(PRIORVALUE(pse__Vendor_Invoice_Item__c))&gt;0)</errorConditionFormula>
        <errorDisplayField>pse__Vendor_Invoice_Item__c</errorDisplayField>
        <errorMessage>The vendor invoice cannot change once set.</errorMessage>
    </validationRules>
</CustomObject>